src/styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  color: #fff;
  background-color: #222;
}

a {
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }
}

:root {
  --bg-9-dark: rgba(0, 0, 0, 0.9);
  --bg-light: rgba(255, 255, 255, 0.6);
  --bg-6-light: rgba(255, 255, 255, 0.6);
  --bg-8-light: rgba(255, 255, 255, 0.8);
  --bg-10-light: rgba(255, 255, 255, 1);
  --text-light: #666;
  --text-strong-light: #222;
  --text-dark: #fff;
  --tooltipBg: #fff;
}

.dark {
  --bg-9-dark: rgba(255, 255, 255, 0.9);
  --bg-light: rgba(0, 0, 0, 0.6);
  --bg-6-light: rgba(0, 0, 0, 0.6);
  --bg-8-light: rgba(2, 2, 2, 0.7);
  --bg-10-light: rgba(10, 10, 10, 1);
  --text-light: #ccc;
  --text-strong-light: #eee;
  --text-dark: #111;
  --tooltipBg: #fff;
}

.tooltip {
  position: absolute;
  margin: 8px;
  padding: 2px 8px;
  background: var(--bg-9-dark);
  color: var(--text-dark);

  max-width: 300px;
  font-size: 12px;
  z-index: 9;
  pointer-events: none;

}

.tooltip span {
  display: block;
  margin-bottom: 2px;
}

/* Mapbox geocoder Basics */
.mapboxgl-ctrl-geocoder,
.mapboxgl-ctrl-geocoder *,
.mapboxgl-ctrl-geocoder *:after,
.mapboxgl-ctrl-geocoder *:before {
  box-sizing: border-box;
}

.mapboxgl-ctrl-geocoder {
  font-size: 18px;
  line-height: 24px;
  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Helvetica Neue",
    Arial, Helvetica, sans-serif;
  position: relative;
  background-color: #fff;
  width: 100%;
  min-width: 240px;
  z-index: 1;
  border-radius: 4px;
  transition: width 0.25s, min-width 0.25s;
}

.mapboxgl-ctrl-geocoder--input {
  font: inherit;
  width: 100%;
  border: 0;
  background-color: transparent;
  margin: 0;
  height: 50px;
  color: #404040; /* fallback */
  color: rgba(0, 0, 0, 0.75);
  padding: 6px 45px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.mapboxgl-ctrl-geocoder--input::-ms-clear {
  display: none; /* hide input clear button in IE */
}

.mapboxgl-ctrl-geocoder--input:focus {
  color: #404040; /* fallback */
  color: rgba(0, 0, 0, 0.75);
  outline: 0;
  box-shadow: none;
  outline: thin dotted;
}

.mapboxgl-ctrl-geocoder .mapboxgl-ctrl-geocoder--pin-right > * {
  z-index: 2;
  position: absolute;
  right: 8px;
  top: 7px;
  display: none;
}

.mapboxgl-ctrl-geocoder,
.mapboxgl-ctrl-geocoder .suggestions {
  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
}

/* Collapsed */
.mapboxgl-ctrl-geocoder.mapboxgl-ctrl-geocoder--collapsed {
  width: 50px;
  min-width: 50px;
  transition: width 0.25s, min-width 0.25s;
}

/* Suggestions */
.mapboxgl-ctrl-geocoder .suggestions {
  background-color: #fff;
  border-radius: 4px;
  left: 0;
  list-style: none;
  margin: 0;
  padding: 0;
  position: absolute;
  width: 100%;
  top: 110%; /* fallback */
  top: calc(100% + 6px);
  z-index: 1000;
  overflow: hidden;
  font-size: 15px;
}

.mapboxgl-ctrl-bottom-left .suggestions,
.mapboxgl-ctrl-bottom-right .suggestions {
  top: auto;
  bottom: 100%;
}

.mapboxgl-ctrl-geocoder .suggestions > li > a {
  cursor: default;
  display: block;
  padding: 6px 12px;
  color: #404040;
}

.mapboxgl-ctrl-geocoder .suggestions > .active > a,
.mapboxgl-ctrl-geocoder .suggestions > li > a:hover {
  color: #404040;
  background-color: #f3f3f3;
  text-decoration: none;
  cursor: pointer;
}

.mapboxgl-ctrl-geocoder--suggestion-title {
  font-weight: bold;
}

.mapboxgl-ctrl-geocoder--suggestion-title,
.mapboxgl-ctrl-geocoder--suggestion-address {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

/* Icons */
.mapboxgl-ctrl-geocoder--icon {
  display: inline-block;
  vertical-align: middle;
  fill: #757575;
  top: 15px;
}

.mapboxgl-ctrl-geocoder--icon-search {
  position: absolute;
  top: 13px;
  left: 12px;
  width: 23px;
  height: 23px;
}

.mapboxgl-ctrl-geocoder--button {
  padding: 0;
  margin: 0;
  border: none;
  cursor: pointer;
  background: #fff;
  line-height: 1;
}

.mapboxgl-ctrl-geocoder--icon-close {
  width: 20px;
  height: 20px;
  margin-top: 8px;
  margin-right: 3px;
}

.mapboxgl-ctrl-geocoder--button:hover .mapboxgl-ctrl-geocoder--icon-close {
  fill: #909090;
}

.mapboxgl-ctrl-geocoder--icon-geolocate {
  width: 22px;
  height: 22px;
  margin-top: 6px;
  margin-right: 3px;
}

.mapboxgl-ctrl-geocoder--icon-loading {
  width: 26px;
  height: 26px;
  margin-top: 5px;
  margin-right: 0px;
  -moz-animation: rotate 0.8s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);
  -webkit-animation: rotate 0.8s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);
  animation: rotate 0.8s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);
}

.mapboxgl-ctrl-geocoder--powered-by {
  display: block;
  float: left;
  padding: 6px 12px;
  padding-bottom: 9px;
  font-size: 13px;
}

.mapboxgl-ctrl-geocoder--powered-by a {
  color: #909090;
}

.mapboxgl-ctrl-geocoder--powered-by a:not(:hover) {
  text-decoration: none;
}

/* Animation */
@-webkit-keyframes rotate {
  from {
    -webkit-transform: rotate(0);
    transform: rotate(0);
  }
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes rotate {
  from {
    -webkit-transform: rotate(0);
    transform: rotate(0);
  }
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

/* Media queries*/
@media screen and (min-width: 640px) {
  .mapboxgl-ctrl-geocoder.mapboxgl-ctrl-geocoder--collapsed {
    width: 36px;
    min-width: 36px;
  }

  .mapboxgl-ctrl-geocoder {
    width: 33.3333%;
    font-size: 15px;
    line-height: 20px;
    max-width: 360px;
  }
  .mapboxgl-ctrl-geocoder .suggestions {
    font-size: 13px;
  }

  .mapboxgl-ctrl-geocoder--icon {
    top: 8px;
  }

  .mapboxgl-ctrl-geocoder--icon-close {
    width: 16px;
    height: 16px;
    margin-top: 3px;
    margin-right: 0;
  }

  .mapboxgl-ctrl-geocoder--icon-geolocate {
    width: 18px;
    height: 18px;
    margin-top: 2px;
    margin-right: 0;
  }

  .mapboxgl-ctrl-geocoder--icon-search {
    left: 7px;
    width: 20px;
    height: 20px;
  }

  .mapboxgl-ctrl-geocoder--input {
    height: 36px;
    padding: 6px 35px;
  }

  .mapboxgl-ctrl-geocoder--icon-loading {
    width: 26px;
    height: 26px;
    margin-top: -2px;
    margin-right: -5px;
  }

  .mapbox-gl-geocoder--error {
    color: #909090;
    padding: 6px 12px;
    font-size: 16px;
    text-align: center;
  }

  .mapboxgl-ctrl-geocoder--powered-by {
    font-size: 11px !important;
  }
}

/* button { */
/*   height: 30px; */
/*   border: 1px solid #fff; */
/*   border-radius: 20px; */
/*   display: flex; */
/*   padding: 4px 16px; */
/*   align-items: center; */
/*   justify-content: center; */
/*   background-color: transparent; */
/*   cursor: pointer; */
/*   transition: 300ms all ease-in-out; */
/*   color: #fff; */

/*   &:hover { */
/*     background-color: #fff; */
/*     border: 1px solid #000; */
/*     color: #000; */
/*   } */
/* } */

.expand {
  margin-top: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  user-select: none; /* Standard syntax */
}
.showOneLine {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}
.showAll {
  overflow-x: visible;
  height: auto;
  display: block;
}
.bold {
  font-weight: bold;
}

.ant-radio-wrapper {
  color: #fff;
}

.ant-select-selection-placeholder {
  text-transform: capitalize;
  @media screen and (min-width: 768px) {
    text-transform: none;
    &:before {
      content: "Select ";
    }
  }
}

.CookieBg {
  position: fixed;
  z-index: 10;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
}
.CookieConsent {
  position: fixed;
  z-index: 20;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 20px;
  background-color: #eee;
  color: #111;
  @media screen and (min-width: 768px) {
    padding: 40px;
  }
  > .flex {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    @media screen and (min-width: 768px) {
      flex-direction: row;
    }
  }
  p {
    max-width: 740px;
    line-height: 1.4;
    a {
      text-decoration: underline;
      display: block;
      @media screen and (min-width: 768px) {
        display: inline;
      }
    }
  }
  button {
    color: #111;
    border-color: #111;
    font-weight: 600;
    transform: scale(1.1);
    &:hover {
      color: #fff;
      border-color: #fff;
      background-color: #111;
    }
  }
}

.vulnerbilityButtonSVG {
  transition: transform ease-in-out 300ms;
  &:hover {
    transform: rotate(20deg);
  }
}

@keyframes changeBackgroundColor {
  0% {
    fill: #97be6c;
  }
  /* 25% { */
  /*   background-color: #f5f51c; */
  /* } */
  /* 50% { */
  /*   background-color: #DD7C75; */
  /* } */
  50% {
    fill: #de1355;
  }
  100% {
    fill: #97be6c;
  }
}

.vulnerbilityButton {
  /* existing styles */

  animation: changeBackgroundColor 8s infinite;
}

.vulnerabilityLegend {
  z-index: 10;
  color: #fff;
  width: 100%;
  margin-top: 16px;

  .legend-bar {
    max-width: 600px;
    margin: 0 auto;
    display: flex;
  }
  .legend-title {
    display: flex;
    margin: 0 auto;
    /* background-color: rgba(0, 0, 0, 0.5); */
    /* backdrop-filter: blur(10px); */
    max-width: 600px;
    color: #fff;
    padding: 6px 10px 6px 10px;
    font-weight: 600;
    text-transform: uppercase;
    align-items: center;
    gap: 8px;
    justify-content: center;
  }
  .legend-row {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 30px;

    .legend-text {
      font-size: 14px;
      color: #000;
      font-weight: 600;
    }
  }

  .ant-radio-group {
    width: 100%;
    @media screen and (min-width: 768px) {
      width: 500px;
    }
  }
  .ant-radio-button-wrapper {
    color: #000 !important;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 600;
    border: none;
    height: 25px;
    border-radius: 0 !important;
    width: 100%;
    position: relative;
    span {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      position: absolute;
      top: 5px;

      line-height: 1;
    }
    &:before {
      display: none !important;
    }
    &:hover {
      color: #000 !important;
      .vul-indicator-arrow {
        display: block;
      }
    }
    &.viewAllvul {
      color: #fff !important;
      width: 100px;
      flex-shrink: 0;
      &:hover {
        span {
          text-decoration: underline;
        }
      }
    }
  }
  .ant-radio-button-wrapper:first-child {
    border: none;
  }
  .ant-radio-button-wrapper-checked {
    color: #000 !important;
    .vul-indicator-arrow {
      display: block;
      path {
        fill: #fff;
      }
    }
  }

  .vul-indicator-arrow {
    display: none;
    position: absolute;
    top: 20px;
    width: 16px;
    path {
      stroke: #fff;
      stroke-width: 3px;
      fill: none;
    }
  }
}

.info {
  font-size: 14px;
  text-transform: lowercase;
  border: 1px solid #fff;
  margin-left: 4px;
  border-radius: 100%;
  height: 18px;
  width: 18px;
  flex-shrink: 0;
  line-height: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

/* .vulnerabilityDot { */
/*   width: 14px; */
/*   height: 14px; */
/*   border-radius: 100%; */
/*   margin-right: 8px; */
/*   display: inline-block; */
/*   vertical-align: middle; */
/* } */

